# rust-web-template

./: Cargo.toml  Dockerfile  build.rs  cargo-generate.toml  docker-compose.yml  justfile
src/: consts.rs  main.rs  metrics_data.rs  routes.rs  state.rs
src/auth/: error_handler.rs  token_extractor.rs  token_middleware.rs
src/modules/: mod.rs
src/modules/users/: mod.rs
